plugins {
    id 'java'
    id 'application'
    //id 'distribution'
}

version = '1.0'
group 'io.turntabl'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

//create a single Jar with all dependencies

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Gradle Jar File Example',
                'Implementation-Version': version,
                'Main-Class': 'io.turntabl.TCMS'
    }
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

jar {
    manifest {
        attributes(
                'Implementation-Title': 'Turntabl Client Management System',
                'Implementation-Version': version,
                'Main-Class': 'io.turntabl.TCMS'
        )
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.8'
    compile group: 'com.h2database', name: 'h2', version: '1.4.187'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
}

application {
    mainClassName = 'io.turntabl.TCMS'
}

//this will build a start script in
tasks.startScripts {
    doLast {
        def scriptFile = file "${outputDir}/${applicationName}"
        scriptFile.text = scriptFile.text.replace('CLASSPATH=$APP_HOME/lib', 'CLASSPATH=$APP_HOME/libs')
    }
}

//put your package-qualified main class name here
application {
    mainClassName = 'io.turntabl.TCMS'
}